--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ body .main-container .data-section .containers .data-containers {
   top: 40px;
   background-color: hsl(235, 46%, 20%);
   width: 100%;
+  height: 150px;
   border-radius: 14px;
   padding: 25px;
 }
@@ -130,33 +131,33 @@ body .main-container .data-section .work-container img {
 }
 body .main-container .data-section .play-container {
   background-color: hsl(195, 74%, 62%);
-  margin-top: 80px;
+  margin-top: 70px;
 }
 body .main-container .data-section .play-container img {
   margin-top: -8px;
 }
 body .main-container .data-section .study-container {
   background-color: hsl(348, 100%, 68%);
-  margin-top: 80px;
+  margin-top: 70px;
 }
 body .main-container .data-section .study-container img {
   margin-top: -8px;
 }
 body .main-container .data-section .exercise-container {
   background-color: hsl(145, 58%, 55%);
-  margin-top: 80px;
+  margin-top: 70px;
   height: 100px;
 }
 body .main-container .data-section .social-container {
   background-color: hsl(264, 64%, 52%);
-  margin-top: 80px;
+  margin-top: 70px;
 }
 body .main-container .data-section .social-container img {
   margin-top: -8px;
 }
 body .main-container .data-section .selfcare-container {
   background-color: hsl(43, 84%, 65%);
-  margin-top: 80px;
+  margin-top: 70px;
 }
 body .main-container .data-section .selfcare-container img {
   margin-top: -8px;
