--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -1,3 +1,16 @@
+$blue: hsl(246, 80%, 60%);
+$light-red-work: hsl(15, 100%, 70%);
+$soft-blue-play: hsl(195, 74%, 62%);
+$light-red-study: hsl(348, 100%, 68%);
+$lime-green-exercise: hsl(145, 58%, 55%);
+$violet-social: hsl(264, 64%, 52%);
+$soft-orange-selfcare: hsl(43, 84%, 65%);
+
+$very-dark-blue: hsl(226, 43%, 10%);
+$dark-blue: hsl(235, 46%, 20%);
+$desaturated-blue: hsl(235, 45%, 61%);
+$pale-blue: hsl(236, 100%, 87%);
+
 body {
   display: flex;
   justify-content: center;
@@ -36,6 +49,11 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        p:hover {
+          cursor: pointer;
+          color: white;
+        }
       }
     }
 
@@ -46,6 +64,11 @@ body {
 
       .containers {
         width: 200px;
+
+        .data-containers:hover {
+          cursor: pointer;
+          background-color: $desaturated-blue;
+        }
       }
 
       .work-container {
